# virtual-try-on

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  AGENTS.md  Dockerfile  README.md  configs.py  custom_logger.py  fast_api.py  pay_Agents.md  pyproject.toml  task.json
backend/alembic/: README.md  db_Agents.md  env.py
backend/alembic/versions/: 1f0b3a0b4c4e_add_user_contact_and_terms_fields.py  43a12d6e0cb7_create_entitlements_table.py  5383226930be_create_subscriptions_tables.py  69f8be8a3be2_update_point_usage_add_project_id_and_.py  75a29732ee83_create_points_tables.py  a5c71b03adcf_drop_entitlements_table.py  aaed0e70bd6f_create_collections_table.py  b7bf49fe0991_create_users_table.py  cc54f1b5d826_add_user_contact_and_consent_fields.py  d5a0a7f5f7d8_create_organizations_table.py  (+5 more)
backend/core/: deps.py  exceptions.py  security.py
backend/db/: session.py
backend/models/: collection.py  organization.py  point.py  project.py  subscription.py  user.py
backend/prompts/: analyze_prompts.py  prod_image_prompts.py  side_view_prompts.py  style_cut_prompts.py  vto_model_prompts.py  vto_prompts.py
backend/schemas/: auth.py  collection.py  entitlement.py  organization.py  point.py  project.py  subscription.py  user.py
backend/scripts/: vto_gradio.py  vto_mino.py  vto_pretotype.py
backend/services/: organization_service.py
backend/test_html/: index.html
backend/tests/: README.md  test_auth.py  test_collections.py  test_entitlements.py  test_organizations.py  test_points.py  test_projects.py  test_subscriptions.py  test_users.py
(+23 files in other folders)
