[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "google-genai>=1.38.0",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "rembg>=2.0.50",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.78.0",
    "natsort>=8.4.0",
    "streamlit==1.50.0",
]